--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -770,7 +770,7 @@ footer {
 }
 
 #chartWrap {
-	max-width: 1100px;
+	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
 	position: relative;
@@ -779,18 +779,21 @@ footer {
 		background: #FFF;
 		float: left;
 		width: 100%;
-		padding: 40px;
+		padding: 40px 0 0 0;
 	}
 }
 
 .holder-parent {
 	position: relative;
-	width: 45%;
-	float: left;
+  width: 100%;
+  float: left;
+  border-bottom: 1px solid #F1F1F1;
+  margin-bottom: 41px;
+  padding-bottom: 45px;
 
-	&:nth-child(2n+2){
-		margin-right: 10%;
-	}
+  &:last-child {
+    border: 0;
+  }
 
 	h4 {
 		font-size: 20px;
@@ -802,31 +805,27 @@ footer {
 	}
 
 	.holder {
-		width: 280px;
-		margin-top: 25px;
+		width: 50%;
+		margin-top: 35px;
 
 		canvas {
-			width: 100%!important;
-			height: auto!important;
+      margin: 0 auto;
+      display: block;
 		}
-	}
-
-	.legend.show {
-		opacity: 1;
 	}
 
 	.legend {
 		position: absolute;
-		top: 50%;
-		right: -34px;
-		border: 3px solid #F1F1F1;
-		padding: 12px 0 8px 0;
-		list-style: none;
-		margin: -82px 0 0 0;
-		border-radius: 3px;
-		background: #FFF;
-		opacity: 0;
-		transition: all 800ms;
+    top: 0;
+    right: 55px;
+    border: 3px solid #F1F1F1;
+    padding: 12px 0 8px 0;
+    list-style: none;
+    margin: 70px 0 0 0;
+    border-radius: 3px;
+    background: #FFF;
+    transition: all 800ms;
+    width: 43%;
 
 		li {
 			margin: 0;
