--- a/css/main.scss
+++ b/css/main.scss
@@ -921,7 +921,7 @@ footer {
 
 	#header {
 		padding: 0;
-		margin: 22px 0 30px 0;
+		margin: 30px 0 26px 0;
 
 		h1 {
 			margin: -2px 0 0 0;
@@ -939,29 +939,42 @@ footer {
 			}
 		}
 	}
+
+	footer {
+		background-color: #EAEAEA;
+	}
 }
 
 #chartWrap {
 	width: 100%;
-	margin: 0 0 60px 0;
+	margin:  0;
 	position: relative;
 
 	ul {
-		padding: 5px 50px 50px 50px;
+		padding: 5px 50px 30px 50px;
 		width: 100%;
 		margin: 0;
 		text-align: center;
+		-moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+    -moz-column-gap: 1.7em;
+    -webkit-column-gap: 1.7em;
+    column-gap: 1.7em;
+    -webkit-column-width: 270px;
+    -moz-column-width: 270px;
+    column-width: 270px;
+    max-width: 1450px;
+		margin: 0 auto;
 
 		li {
-			width: 290px;
-			margin: 15px;
+			width: 100%;
+			margin: .9em 0;
 			list-style: none;
 			border-radius: 2px;
-			background: #f2f2f2;
+			background: #f5f5f5;
 			display: inline-block;
-			box-shadow: 0px 0px 1px 1px rgba(200, 200, 200, 0.53);
-			-webkit-box-shadow: 0px 0px 1px 1px rgba(200, 200, 200, 0.53);
-			-moz-box-shadow: 0px 0px 1px 1px rgba(200, 200, 200, 0.53);
+			border: 1px solid #DADADA;
 
 			h4 {
 				font-size: 19px;
@@ -995,18 +1008,29 @@ footer {
 		    float: left;
 		    width: 100%;
 		    background-color: #fff;
+		    -moz-column-count: auto;
+		    -webkit-column-count: auto;
+		    column-count: auto;
+		    -moz-column-gap: normal;
+		    -webkit-column-gap: normal;
+		    column-gap: normal;
+		    -webkit-column-width: inherit;
+				-moz-column-width: inherit;
+				column-width: inherit;
 
 				li {
-					margin: 0;
+					margin: 2px 0;
 					padding: 6px 25px 6px 20px;
 					font-size: 14px;
 					cursor: pointer;
 					width: 100%;
 					float: left;
 					background: none;
-					box-shadow: none;
+					border: 0;
 					border-radius: 0;
 					text-align: left;
+					display: inline-block;
+			    width: 100%;
 
 					&:hover {
 						background-color: #F5F5F5;
@@ -1053,8 +1077,29 @@ footer {
 	}
 }
 
+@media screen and ( max-width: 750px ){
+	#chartWrap {
+		ul {
+			padding: 5px 25px 50px 25px;
+		}
+	}
 
+	.charts {
+		#header {
+			margin: 22px 0 13px 0;
+			
+			#header-logo {
+				font-size: 52px;
+			}
 
+			h1 {
+				font-size: 11px;
+				top: -3px;
+				position: relative;
+			}
+		}
+	}
+}
 
 
 
