--- a/css/main.scss
+++ b/css/main.scss
@@ -379,6 +379,34 @@ body {
   visibility: visible;
 }
 
+.directions {
+  display: none;
+  text-align: center;
+  padding: 10px;
+  margin-top: 40px;
+  font-family: "Avenir Medium";
+  font-size: 0.85rem;
+  float: left;
+  width: 100%;
+  position: relative;
+  z-index: 100;
+
+  span {
+    border: 1px solid #BFE7CF;
+    text-align: center;
+    padding: 7px 13px 6px;
+    font-size: 13px;
+    color: #29BD66;
+  }
+
+  &:hover {
+    span {
+      border-color: #7CCF9D;
+      color: #1CAD57;
+    }
+  }
+}
+
 #howTo {
 	margin-top: 200px;
 	padding: 33px 0;
@@ -387,6 +415,7 @@ body {
 	margin: 125px 0 0;
 	opacity: 0;
 	line-height: 1.4;
+  visibility: visible;
   @include custom-bezier(all, .65s);
 
 	p {
@@ -905,9 +934,16 @@ footer {
 		}
 	}
 
+  .directions {
+    display: block;
+    opacity: 1!important;
+  }
+
 	#howTo {
 		margin: 80px 0;
 		padding-top: 40px;
+		opacity: 0!important;
+    visibility: hidden;
 
 		p {
 			padding: 0;
@@ -916,6 +952,11 @@ footer {
 		p.graphs {
 			text-align: left;
 		}
+
+    &.reveal {
+      visibility: visible;
+      opacity: 1!important;
+    }
 	}
 
 	#subscribe_ {
