--- a/css/main.scss
+++ b/css/main.scss
@@ -382,14 +382,13 @@ body {
 .directions {
   display: none;
   text-align: center;
-  padding: 10px;
-  margin-top: 40px;
-  font-family: "Avenir Medium";
-  font-size: 0.85rem;
-  float: left;
-  width: 100%;
+  margin: 85px auto 0 auto;
   position: relative;
   z-index: 100;
+
+  &:hover {
+    cursor: default;
+  }
 
   span {
     border: 1px solid #BFE7CF;
@@ -397,12 +396,11 @@ body {
     padding: 7px 13px 6px;
     font-size: 13px;
     color: #29BD66;
-  }
-
-  &:hover {
-    span {
+    font-family: "Avenir Medium";
+      &:hover {
       border-color: #7CCF9D;
       color: #1CAD57;
+      cursor: pointer;
     }
   }
 }
